Add Dotenv to store discord sensitive data